@@ -2,7 +2,7 @@ Package: anytime
 Type: Package
 Title: Anything to 'POSIXct' or 'Date' Converter
 Version: 0.1.1.1
-Date: 2016-12-03
+Date: 2016-12-04
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Convert input in any one of character, integer, numeric, factor,
